# depclean

./: .gitignore  Cargo.toml  LICENSE  README.md  depclean-darwin-arm64  justfile
.github/workflow/: ci.yaml  ci.yml
.github/workflows/: changelog.yml  ci.yml  release.yml
examples/: basic.rs
npm/depclean/: README.md  package.json
npm/depclean-darwin-arm64/: depclean  package.json
npm/depclean/scripts/: gen.mjs
src/: dependencies.rs  lib.rs  main.rs  runtime.rs  walk.rs
src/checkers/: js.rs  mod.rs
tests/: test.rs
tests/fixtures/simple/: depclean  index.js  package.json
