[package]
name = "depclean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = { version = "0.9.12", features = ["derive"] }
colorful = "0.3.2"
fxhash = "0.2.1"
ignore = "0.4.22"
oxc_allocator = "0.24.1"
oxc_ast = "0.24.1"
oxc_parser = "0.24.1"
oxc_semantic = "0.24.1"
oxc_span = { version = "0.24.1", features = ["serialize"] }
rayon = "1.10.0"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
